added order by date ASC search for reservation