@@ -1,14 +1,14 @@
 package youngcapital.hotel.JavaBackendHotel.controller;
 
-import java.time.LocalDate;
-import java.util.Arrays;
-import java.util.Optional;
-
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
-
 import youngcapital.hotel.JavaBackendHotel.domain.Reservation;
 import youngcapital.hotel.JavaBackendHotel.domain.Room;
+
+import java.time.LocalDate;
+import java.util.Arrays;
+import java.util.List;
+import java.util.Optional;
 
 @Service
 public class ReservationService {
@@ -24,7 +24,7 @@ public class ReservationService {
 	public void saveReservation(Reservation reservation) {
 		Room r = reservation.getRooms().get(0);
 		Optional<Room> optional = roomRepository.findById(r.getId());
-		reservation.setRooms(Arrays.asList(optional.get()) );
+		reservation.setRooms(List.of(optional.get()));
 		rr.save(reservation);
 	}
 
@@ -35,6 +35,11 @@ public class ReservationService {
 			approvedReservation.setApprovalDate(LocalDate.now());
 			rr.save(approvedReservation);
 		}
+	}
+
+	public Iterable<Reservation> getReservationsByDate(){
+		System.out.println(rr.reservations());
+		return(rr.reservations());
 	}
 
 	public void deleteReservation(long reservationid) {
